<resources>
    <string name="app_name">SharedPreferenceApplication</string>
    <string name="login">LOGIN</string>
    <string name="load">LOAD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear">CLEAR</string>
    <string name="isadult">isAdult</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="sharedpreferences">sharedPreferences</string>
</resources>